# remainder-bot

./: .env.example  README.md  commands.py  config.py  db.json  keyboards.py  main.py  models.py  pyproject.toml  scheduler.py  tasks.py
src/: commands.py  config.py  keyboards.py  scheduler.py
