[tool.poetry]
name = "remainder-bot"
version = "0.1.0"
description = ""
authors = ["al-ov73"]
readme = "README.md"
packages = [{ include = "remainder_bot", from = "src" }]
include = ["src/**/__init__.py"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
aiogram = "^3.17.0"
apscheduler = "^3.11.0"
pytz = "^2025.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
